# test-repo

./: .gitignore  Dockerfile  Dockerfile.cloud  PIPELINE_IMPROVEMENTS.md  README.md  pyproject.toml
depth_splatfacto/: __init__.py  config.py  model.py
pipeline/: __init__.py  collision.py  compress.py  convert_poses.py  depth_supervision.py  extract_frames.py  ingest.py  package.py  postprocess_splat.py  process.py  progressive_splat.py  quality_assessment.py  train.py
scripts/: cloud_train.sh  debug_frames_manifest.py  debug_poses.py  debug_trajectory.py  diagnose_scan.py  fix_transforms.py  generate_synthetic_scan.py  inspect_scan.py  upload_to_pod.sh
tests/: __init__.py  test_pipeline.py  test_poses.py
utils/: __init__.py  matrix.py  validation.py
