[project]
name = "reality-engine-backend"
version = "0.1.0"
description = "Backend processing pipeline for RealEstate Engine 3.0 - converts iOS scans to Gaussian Splats"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Reality Engine Team"}
]

dependencies = [
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    "matplotlib>=3.7.0",
    "Pillow>=10.0.0",
    "trimesh>=4.0.0",
    "networkx>=3.0.0",
    "scipy>=1.11.0",
    "tqdm>=4.66.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
training = [
    "torch>=2.0.0",
    "nerfstudio>=1.0.0",
    "gsplat>=0.1.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[project.scripts]
reality-process = "pipeline.process:app"

# Register depth-splatfacto as a nerfstudio method plugin
[project.entry-points."nerfstudio.method_configs"]
depth-splatfacto = "depth_splatfacto.config:DepthSplatfactoSpecification"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["pipeline*", "utils*", "depth_splatfacto*"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
